--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CivicLens — Public Infrastructure Transparency</title>
+    <title>CivicLens - Public Infrastructure Transparency</title>
     <meta name="description" content="CivicLens makes public infrastructure projects transparent, verifiable, and accountable by providing clear information and tamper-evident records.">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#0b3d91">
-    <link rel="icon" href="assets/civiclens-mark.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <meta property="og:title" content="CivicLens — Public Infrastructure Transparency">
     <meta property="og:description" content="Track projects, verify claims, and strengthen accountability in public development.">
@@ -31,7 +32,7 @@
     <header class="site-header" role="banner">
       <div class="container header-inner">
         <a class="brand" href="./" aria-label="CivicLens home">
-          <img class="brand-mark" src="assets/civiclens-mark.svg" alt="" width="32" height="32">
+          <img class="brand-mark" src="assets/logo.svg" alt="" width="36" height="36" style="border-radius:50%;">
           <span class="brand-text">CivicLens</span>
         </a>
         <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="site-nav">
@@ -610,7 +611,7 @@
         <div class="footer-grid">
           <div class="footer-col">
             <div class="footer-brand">
-              <img class="brand-mark" src="assets/civiclens-mark.svg" alt="" width="32" height="32">
+              <img class="brand-mark" src="assets/logo.svg" alt="" width="36" height="36" style="border-radius:50%;">
               <span class="brand-text">CivicLens</span>
             </div>
             <p class="footer-tagline">
